--- a/Purchasing.Web/Views/Order/Review.cshtml
+++ b/Purchasing.Web/Views/Order/Review.cshtml
@@ -36,11 +36,12 @@
         #orn {margin: 1em 0;}
         #orn ul {padding: 0;}
         #orn li {margin: 0;}
-        #order-details .col1, #order-details .col2 {width: 49.25%; vertical-align: top; text-align: left; display:inline-block;}
+        #order-details .col1, #order-details .col2, #kfs .col1, #kfs .col2 {width: 49.25%; vertical-align: top; text-align: left; display:inline-block;}
+        #kfs .col1 {margin-top:36px; padding-left:30px; width:46%;}
         #order-details .col1 .display-form, #order-details .col2 .display-form {height: 140px; margin-bottom: 0;}
         #order-details .col1 ul {padding:50px 0 0 30px;}
-        #order-details .col1 ul span, #accounts .acct-info span, #order-details .col1 ul strong, #accounts .acct-info strong {display:inline-block; vertical-align:top;}
-        #order-details .col1 ul span {width:150px;}
+        #order-details .col1 ul span, #accounts .acct-info span, #order-details .col1 ul strong, #accounts .acct-info strong, #kfs .col1 ul span  {display:inline-block; vertical-align:top;}
+        #order-details .col1 ul span, #kfs .col1 ul span, #kfs .col2 ul span {width:150px;}
         #accounts .acct-info span  {width:auto; min-width:650px;}
         #order-details .col1 ul strong {width:250px;}
         #accounts .acct-info strong  {width:150px;}
