--- a/Purchasing.Web/Views/Order/_ReviewKfs.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewKfs.cshtml
@@ -24,18 +24,34 @@
 <section id="kfs" class="ui-corner-all display-form">
 
     <header class="ui-corner-top ui-widget-header">Financial System Details</header>
-
     <div class="section-contents">
+    <div class="col1">
     
         <ul>
-            <li>Doc #:<span id="kfs-docnum"></span></li>
-            <li>PO #:<span id="kfs-ponum"></span></li>
-            <li>PO Type: <span id="kfs-potype"></span></li>
-            <li>Received: <span id="kfs-received"></span></li>
-            <li>Fully Paid: <span id="kfs-fullypaid"></span></li>
-            <li>Route Level: <span id="kfs-routelevel"></span></li>
+            <li><span>Doc #:</span><strong id="kfs-docnum"></strong></li>
+            <li><span>Route Level: </span><strong id="kfs-routelevel"></strong></li>
         </ul>
 
+    </div>
+    <div class="col2">
+    <section class="display-form ui-corner-all" id="deliveryTo">
+
+                    <header class="ui-corner-top ui-widget-header">_insert header here_</header>
+
+                    <div class="section-contents">
+                   
+
+        <ul>
+            <li><span>PO #:</span><strong id="kfs-ponum"></strong></li>
+            <li><span>PO Type: </span><strong id="kfs-potype"></strong></li>
+            <li><span>Received: </span><strong id="kfs-received"></strong></li>
+            <li><span>Fully Paid: </span><strong id="kfs-fullypaid"></strong></li>
+        </ul>
+                            </div>
+
+                </section>
+
+    </div>
     </div>
 
 </section>
