#kfs was changed to #kfs-section

--- a/Purchasing.Web/Views/Order/Review.cshtml
+++ b/Purchasing.Web/Views/Order/Review.cshtml
@@ -40,8 +40,8 @@
         #orn {margin: 1em 0;}
         #orn ul {padding: 0;}
         #orn li {margin: 0;}
-        #order-details .col1, #order-details .col2, #kfs .col1, #kfs .col2 {width: 49.25%; vertical-align: top; text-align: left; display:inline-block;}
-        #kfs .col1 {margin-top:36px; padding-left:30px; width:46%;}
+        #order-details .col1, #order-details .col2, #kfs-section .col1, #kfs-section .col2 {width: 49.25%; vertical-align: top; text-align: left; display:inline-block;}
+        #kfs-section .col1 {margin-top:36px; padding-left:30px; width:46%;}
         #order-details .col1 .display-form, #order-details .col2 .display-form {height: 140px; margin-bottom: 0;}
         #order-details .col1 ul {padding:50px 0 0 30px;}
         #order-details .col1 ul span, #accounts .acct-info span, #order-details .col1 ul strong, #accounts .acct-info strong, #kfs .col1 ul span  {display:inline-block; vertical-align:top;}
