--- a/Purchasing.Web/Views/Order/_ReviewKfs.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewKfs.cshtml
@@ -13,9 +13,9 @@
 
     </div>
     <div class="col2">
-    <section class="display-form ui-corner-all" id="deliveryTo">
+    <section class="display-form ui-corner-all" id="_INSERT_">
 
-                    <header class="ui-corner-top ui-widget-header">_insert header here_</header>
+                    <header class="ui-corner-top ui-widget-header">_INSERT_</header>
 
     <div id="kfs-data" class="section-contents" style="display:none;">
 
@@ -31,5 +31,6 @@
             <li id="kfs-loading-status">Loading The Campus Financial Data For This Order</li>
         </ul>
     </div>
+    </section>
 
 </section>
