--- a/Purchasing.Web/Views/Order/ReceiveItems.cshtml
+++ b/Purchasing.Web/Views/Order/ReceiveItems.cshtml
@@ -30,13 +30,15 @@
                     var antiforgery = $("input[name='__RequestVerificationToken']").val();
                     var url = '@Url.Action("ReceiveItems")';
                     var line = "#receivedLineItem_" + lineItemId;
+                    var updateMessage = "#updateMessage" + lineItemId;
+                    $(updateMessage).html("Updateing...");
                     $.post(url, { id: id, lineItemId: lineItemId, receivedQuantity: receiveVal, __RequestVerificationToken: antiforgery }, function (result) {
                         if (result) {
                             $(line).val(result.receivedQuantityReturned);
                             if (result.success == true) {
-                                alert(result.message);
+                                $(updateMessage).html(result.message);
                             } else {
-                                alert(result.message);
+                                $(updateMessage).html(result.message);
                             }
                         } else {
                             alert("There was a problem updated the received quantity.");
@@ -69,13 +71,15 @@
         @{
             var odd = false;
             var lineId = "";
+            var spanId = "";
         }
         @foreach(var item in Model.LineItems)
         {
             lineId = "receivedLineItem_" + item.Id;
+            spanId = "updateMessage" + item.Id;
             <tr class="@(odd ? "odd":"even")">
                
-                <td><input class="receiveLineItem" data-id="@item.Id" title="Number of Units received for this line item." value="@item.QuantityReceived" id="@lineId"/></td>
+                <td><input class="receiveLineItem" data-id="@item.Id" title="Number of Units received for this line item." value="@item.QuantityReceived" id="@lineId"/><span id="@spanId"></span></td>
                 <td>@item.Quantity</td>
                 <td>@item.Unit</td>
                 <td>@(string.IsNullOrWhiteSpace(item.CatalogNumber) ? "n/a" : item.CatalogNumber)</td>
