--- a/Purchasing.Web/Views/Wizard/CreateWorkgroup.cshtml
+++ b/Purchasing.Web/Views/Wizard/CreateWorkgroup.cshtml
@@ -6,6 +6,7 @@
     ViewBag.StepName = "Create Workgroup";
     ViewBag.Skip = "";
     ViewBag.IsAdministrative = false;
+    ViewBag.IsAccountSync = false;
 }
 
 @Html.Partial("_StatusBar", 0)  
