--- a/Purchasing.Web/Views/Wizard/AddAccounts.cshtml
+++ b/Purchasing.Web/Views/Wizard/AddAccounts.cshtml
@@ -7,6 +7,7 @@
     ViewBag.Previous = Url.Action("People", "Wizard", new { id= Model.Workgroup.Id, roleFilter="PR"});
     ViewBag.Skip = Url.Action("Accounts", "Wizard", new {id = Model.Workgroup.Id});
     ViewBag.IsAdministrative = Model.Workgroup.Administrative;
+    ViewBag.IsAccountSync = Model.Workgroup.SyncAccounts;
 }
 
 @section AdditionalScripts{
