--- a/Purchasing.Web/Views/Wizard/AddConditionalApproval.cshtml
+++ b/Purchasing.Web/Views/Wizard/AddConditionalApproval.cshtml
@@ -6,6 +6,7 @@
     ViewBag.Previous = Url.Action("Vendors", "Wizard", new { id = Model.Workgroup.Id});
     ViewBag.Skip = Url.Action("ConditionalApprovals", "Wizard", new { id = Model.Workgroup.Id });
     ViewBag.IsAdministrative = Model.Workgroup.Administrative;
+    ViewBag.IsAccountSync = Model.Workgroup.SyncAccounts;
 }
 
 @section AdditionalScripts
