--- a/Purchasing.Web/Views/Wizard/AddNewVendor.cshtml
+++ b/Purchasing.Web/Views/Wizard/AddNewVendor.cshtml
@@ -7,6 +7,7 @@
     ViewBag.Previous = Url.Action("Vendors", "Wizard", new { id = Model.WorkgroupVendor.Workgroup.Id });
     ViewBag.Skip = Url.Action("Vendors", "Wizard", new { id = Model.WorkgroupVendor.Workgroup.Id });
     ViewBag.IsAdministrative = Model.WorkgroupVendor.Workgroup.Administrative;
+    ViewBag.IsAccountSync = Model.WorkgroupVendor.Workgroup.SyncAccounts;
 }
 
 
