--- a/Purchasing.Web/Views/Wizard/AddPeople.cshtml
+++ b/Purchasing.Web/Views/Wizard/AddPeople.cshtml
@@ -63,6 +63,7 @@
             break;
     }
     ViewBag.IsAdministrative = Model.Workgroup.Administrative;
+    ViewBag.IsAccountSync = Model.Workgroup.SyncAccounts;
 }
 
 
