--- a/Purchasing.Web/Views/Wizard/Addresses.cshtml
+++ b/Purchasing.Web/Views/Wizard/Addresses.cshtml
@@ -7,6 +7,7 @@
     ViewBag.Next = Url.Action("AddConditionalApproval", "Wizard", new { id = Model.Workgroup.Id });
     ViewBag.ListPage = true;
     ViewBag.IsAdministrative = Model.Workgroup.Administrative;
+    ViewBag.IsAccountSync = Model.Workgroup.Administrative;
 }
 
 
