--- a/Purchasing.Web/Views/Wizard/SubOrganizations.cshtml
+++ b/Purchasing.Web/Views/Wizard/SubOrganizations.cshtml
@@ -7,6 +7,7 @@
 	ViewBag.Next = Url.Action("AddPeople", "Wizard", new {id = Model.Id, roleFilter ="RQ"});
 	ViewBag.ListPage = true;
     ViewBag.IsAdministrative = Model.Administrative;
+    ViewBag.IsAccountSync = Model.SyncAccounts;
 }
 
 	@Html.Partial("_StatusBar", Model.Id) 
