--- a/Purchasing.Web/Css/Site.css
+++ b/Purchasing.Web/Css/Site.css
@@ -672,3 +672,48 @@ div.ui-widget-content
 {
     margin-right:5px;
 }   
+
+
+/* forms */
+form input[type="text"].wide200 
+{
+    width:200px;
+}
+form input[type="text"].wide600, textarea.wide600 
+{
+    width:600px;
+}
+.editor-field .selector 
+{
+    margin:0;
+}
+
+.editor-field .selector .ac-gradientbackground, .editor-field .selector .ac-container
+{
+    background:none;
+    border:none;
+    padding:0;
+}
+#wizard-instructions-table 
+{
+    margin-bottom:12px;
+}
+table.dataTable .even:hover, table.dataTable .odd:hover
+{
+    background-color: rgba(170, 201, 225, 0.5);
+    border: none;
+    box-shadow: 0 3px 11px #BBBBBB;
+}
+.white_bkgnd 
+{
+    background-color:#FFF;
+    color:#000;
+}
+table.dataTable 
+{
+    background-color:#FFF;
+}
+table.no_select.dataTable .even:hover, table.dataTable.no_select .odd:hover
+{
+    background-color:transparent;
+}
