--- a/Purchasing.Web/Views/Wizard/_SubOrganizations.cshtml
+++ b/Purchasing.Web/Views/Wizard/_SubOrganizations.cshtml
@@ -8,9 +8,9 @@
         workgroup. You are limited to the organizations that have been added to your account.</p>
         <p>Using the wizard, you can only add sub-organizations. If you need to remove them, please use the the admin: workgroup page. </p>
 </div>
-<table class='dt-table no-icon-table'>
+<table class='dt-table no-icon-table no_select'>
 	<thead>
-		<tr>			
+		<tr class="white_bkgnd">			
 			<th>
 				Name
 			</th>
