--- a/Purchasing.Web/Views/Wizard/_PeopleTable.cshtml
+++ b/Purchasing.Web/Views/Wizard/_PeopleTable.cshtml
@@ -23,7 +23,7 @@
     <p>Use the "Prev" or "add another..." links to add aditional users for this category.</p> 
     <p>Using the wizard, you can only users. If you need to remove them, please use the the admin: workgroup page. </p>
     </div>     
-<table class='dt-table nofirsticon'>
+<table class='dt-table nofirsticon no_select'>
 	<thead>
 		<tr>
 						
