--- a/Purchasing.Web/Views/AutoApproval/Index.cshtml
+++ b/Purchasing.Web/Views/AutoApproval/Index.cshtml
@@ -30,14 +30,14 @@
             <ul>
                 <li>
                     <div class="editor-label">
-                        @Html.Label("Show All: ")
+                        @Html.Label("Show All")
                     </div>
                     <div class="editor-field">
                         @Html.CheckBoxFor(x => x.ShowAll) 
                     </div>
                 </li>
 
-                <li>
+                <li class="apply">
                     <label>&nbsp;</label>
 			        <input class="button" type="submit" value="Apply" />
                 </li>
