--- a/Purchasing.Web/Views/Order/AdminOrders.cshtml
+++ b/Purchasing.Web/Views/Order/AdminOrders.cshtml
@@ -10,6 +10,7 @@
 @section SubNav
 {
 	<ul class='navigation'>
+        <li>@Html.ActionLink("Filters", "filters", "", new { @class = "button" })</li>
         <li>@Html.ActionLink("Update Column Preferences", "ColumnPreferences", "User", new { id = User.Identity.Name, fromList = true }, new { @class = "button" })</li>
 	</ul>
 }
