--- a/Purchasing.Web/Views/Wizard/_AccountsTable.cshtml
+++ b/Purchasing.Web/Views/Wizard/_AccountsTable.cshtml
@@ -5,7 +5,7 @@
     <p>Using the wizard, accounts can only be added. To edit or remove an account, use the admin: workgroup page.</p>
     <p>Additional accounts may be added using either the "Prev" or "add another account" link.</p>
  </div>          
-<table class='dt-table no-icon-table'>
+<table class='dt-table no-icon-table no_select'>
     <thead>
         <tr>            
             <th>Id</th>
