--- a/Purchasing.Web/Views/Wizard/AddKfsVendor.cshtml
+++ b/Purchasing.Web/Views/Wizard/AddKfsVendor.cshtml
@@ -40,7 +40,7 @@
 				    <div class="editor-field required">
                         @*@this.Select("WorkgroupVendor.VendorId").Options(Model.Vendors, x => x.Id, x => x.Name).FirstOption("--Select Vendor--").Selected(Model.WorkgroupVendor.VendorId)*@
 
-                        <input type="text" id="VendorSearch"/>
+                        <input type="text" id="VendorSearch" class="wide300 "/>
                         @Html.Hidden("WorkgroupVendor.VendorId")<span>*</span> 
 
                         @Html.ValidationMessageFor(a => a.WorkgroupVendor.VendorId)
@@ -50,7 +50,7 @@
 
                 <li>
                     <div class="editor-label required">@Html.LabelFor(a => a.WorkgroupVendor.VendorAddressTypeCode)</div>
-                    <div class="editor-field required">
+                    <div class="editor-field required wide400 ">
                         @this.Select("WorkgroupVendor.VendorAddressTypeCode").FirstOption("--Select Address--").Options(Model.VendorAddresses).Selected(Model.WorkgroupVendor.VendorAddressTypeCode).Disabled(true)<span>*</span> 
                         @Html.ValidationMessageFor(a => a.WorkgroupVendor.VendorAddressTypeCode)
                     </div>
