added a rearrange script for trish to rearrange the table.

--- a/Purchasing.Web/Views/Order/Index.cshtml
+++ b/Purchasing.Web/Views/Order/Index.cshtml
@@ -9,6 +9,8 @@
     
     Bundles.Reference("scripts/public/single/TableTools.js");
     Bundles.Reference("scripts/public/single/ZeroClipboard.js");
+    Bundles.Reference("scripts/public/single/RearrangeDataTable.js");
+   
 }
 
 @section SubNav
