--- a/Purchasing.Web/Css/Datatables.css
+++ b/Purchasing.Web/Css/Datatables.css
@@ -52,10 +52,13 @@ div.dataTables_wrapper
 .dataTables_paginate {border-bottom-right-radius: 4px; padding-right: 1%;}
 .dataTables_filter, .dataTables_paginate {text-align: right;}
 
+.dttt_buttons {display: inline-block; margin-left: 2em;}
+
+
 table.dataTable {margin: 0px; border: 0px; min-height: 40px;}
 table.dataTable tr {border-bottom: #ccc 1px solid;}
 table.dataTable td, table.dataTable th {padding: .75em .25em .75em 1em;}
-table .even {background-color: #eee; border-top: #fff 1px solid; box-shadow: 0 3px 3px -3px #fff inset; }
+table.dataTable .even {background-color: #eee; border-top: #fff 1px solid; box-shadow: 0 3px 3px -3px #fff inset; }
 table.dataTable .odd {background-color: #f4f4f4;}
 .even:hover, .odd:hover {box-shadow: 0px 3px 11px #bbb; border: 2px solid #fff; background-color: rgba(255,255,255,.5)}
 
@@ -163,3 +166,6 @@ a.order-filters-toggle {
 {
     margin-right:25px;
 }
+
+
+
