--- a/Purchasing.Web/Views/Order/_ReviewOrderDetails.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewOrderDetails.cshtml
@@ -1,7 +1,10 @@
 ﻿@model ReviewOrderViewModel
 <section id="order-details" class="ui-corner-all display-form">
 
-    <header class="ui-corner-top ui-widget-header">Request # @Model.Order.RequestNumber</header>
+    <header class="ui-corner-top ui-widget-header">
+        <a href="#" class="ui-icon ui-icon-info" title="Order Request Number Is For Internal Use Only" style="float:left;" ></a>&nbsp;&nbsp;
+        <span style="float:none">Request # @Model.Order.RequestNumber</span>
+    </header>
 
     <div class="section-contents">
 
