removed PO number (the actual PO number that is generated by kfs that can be used for purchasing, different than doc num and our "po number")

--- a/Purchasing.Web/Views/Order/_ReviewKfs.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewKfs.cshtml
@@ -19,7 +19,7 @@
                 <div id="kfs-data" class="section-contents" style="display:none;">
 
                     <ul>
-                        <li><span>PO #:</span><strong id="kfs-ponum"></strong></li>
+                        @*<li><span>PO #:</span><strong id="kfs-ponum"></strong></li>*@
                         <li><span>PO Type: </span><strong id="kfs-potype"></strong></li>
                         <li><span>Received: </span><strong id="kfs-received"></strong></li>
                         <li><span>Fully Paid: </span><strong id="kfs-fullypaid"></strong></li>
