--- a/Purchasing.Web/Views/Order/_ReviewLineItems.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewLineItems.cshtml
@@ -103,13 +103,18 @@
             </tr>
             <tr class="item-footer">
                 <td colspan="4">&nbsp;</td>
+                <td class="label row-total-label">Estimated Freight:</td>
+                <td class="row-total-value">@string.Format("${0:f}", Model.Order.FreightAmount)</td>            
+            </tr>
+            <tr class="item-footer">
+                <td colspan="4">&nbsp;</td>
                 <td class="label row-total-label">Estimated Shipping:</td>
                 <td class="row-total-value">@string.Format("${0:f}", Model.Order.ShippingAmount)</td>            
             </tr>
             <tr class="item-footer">
                 <td colspan="4"></td>
                 <td class="label row-total-label">Estimated Tax:</td>
-                <td class="row-total-value">@string.Format("${0:f}", Model.Order.EstimatedTax)</td>
+                <td class="row-total-value">@string.Format("{0:f}%", Model.Order.EstimatedTax)</td>
             </tr>
             <tr class="item-footer">
                 <td colspan="4"><em>*All totals are estimated, final values are determined after uploaded to KFS.</em></td>
