--- a/Purchasing.Web/Views/Order/_ReviewLineItems.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewLineItems.cshtml
@@ -2,127 +2,131 @@
 
 <section id="line-items" class="ui-corner-all display-form">
 
-    <header class="ui-corner-top ui-widget-header">Line Items</header>
-
+    <header class="ui-corner-top ui-widget-header">Line Items </header>
+   
     <div class="section-contents">
-    <table>
-        <thead>
-            <tr>
-                <th>Qty.</th>
-                <th>Unit</th>
-                <th>Catalog #</th>
-                <th>Description</th>
-                <th>Commodity</th>
-                <th>Unit $</th>
-            </tr>
-        </thead>
-        <tbody>
-            @{ var odd = false; }
-            @foreach (var line in Model.LineItems)
-            {
-                var hasLinesplits = Model.HasLineSplits;
-                var hasMoreInfo = line.Commodity != null || !string.IsNullOrWhiteSpace(line.Notes) || !string.IsNullOrWhiteSpace(line.Url);
-                
-                <tr class="row-item @(odd ? "row-odd" : "row-even") @(!hasLinesplits && !hasMoreInfo ? "row-bottom" : string.Empty)">
-                    <td>@line.Quantity</td>
-                    <td>@line.Unit</td>
-                    <td>@(string.IsNullOrWhiteSpace(line.CatalogNumber) ? "n/a" : line.CatalogNumber)</td>
-                    <td>@line.Description</td>
-                    <td>@(line.Commodity != null ? line.Commodity.Name : "n/a")</td>
-                    <td>@line.UnitPrice</td>
+        @if(Model.CanReceiveItems)
+        {
+            @Html.ActionLink("Receive Items", "ReceiveItems", new {id = Model.Order.Id}, new {@class = "button col2"})
+        }
+        <table>
+            <thead>
+                <tr>
+                    <th>Qty.</th>
+                    <th>Unit</th>
+                    <th>Catalog #</th>
+                    <th>Description</th>
+                    <th>Commodity</th>
+                    <th>Unit $</th>
                 </tr>
-                              
-                if (hasLinesplits)
+            </thead>
+            <tbody>
+                @{ var odd = false; }
+                @foreach (var line in Model.LineItems)
                 {
-                    <tr class="@(odd ? "row-odd" : "row-even") @(hasMoreInfo ? "row-bottom" : string.Empty)">
-                        <td colspan="6">
-                            @*<div class="row-split ui-corner-all @(line.UnitPrice * line.Quantity != line.Splits.Sum(a => a.Amount) ? "row-split-prob" : string.Empty)">*@
-                            <div class="row-split ui-corner-all">
-                                <table>
-                                    <thead>
-                                        <tr><td colspan="4">Line Item Split</td></tr>
-                                    </thead>
-                                    <tbody>
-                                        @foreach (var split in Model.Splits.Where(x=>x.LineItem == line))
-                                        {  
-                                            <tr>
-                                                <td>@(string.IsNullOrWhiteSpace(split.Account) ? "n/a" : split.Account)</td>
-                                                <td>@(string.IsNullOrWhiteSpace(split.SubAccount) ? "n/a" : split.SubAccount)</td>
-                                                <td>@(string.IsNullOrWhiteSpace(split.Project) ? "n/a" : split.Project)</td>
-                                                <td>@split.Amount</td>
-                                            </tr>
-                                        }
-                                    </tbody>
-                                </table>
-
-                            </div>
-                        </td>
-                    </tr>                    
-                }
-
-
-                if (hasMoreInfo)
-                {
-                    <tr class="@(odd ? "row-odd" : "row-even") row-bottom">
-                        <td colspan="6" class="extra-info">
-                            @if (line.Commodity != null)
-                            {
-                                <div class="line-commodity"><strong>Commodity:</strong> @string.Format("[{0}] {1}", line.Commodity.Id, line.Commodity.Name)</div>
-                            }
-                            @if (!string.IsNullOrWhiteSpace(line.Url))
-                            {
-                                var validUrl = Uri.IsWellFormedUriString(line.Url, UriKind.Absolute);
-                                <div class="line-url">
-                                    <strong>Url:</strong>
-                                    @if (validUrl)
-                                    {
-                                        <a href="@line.Url">@line.Url</a>   
-                                    }
-                                    else
-                                    {
-                                        @line.Url
-                                    }
-                                </div>    
-                            }
-                            @if (!string.IsNullOrWhiteSpace(line.Notes))
-                            {
-                                <div class="line-notes"><strong>Notes:</strong> @line.Notes</div>    
-                            }
-                        </td>
+                    var hasLinesplits = Model.HasLineSplits;
+                    var hasMoreInfo = line.Commodity != null || !string.IsNullOrWhiteSpace(line.Notes) || !string.IsNullOrWhiteSpace(line.Url);
+                
+                    <tr class="row-item @(odd ? "row-odd" : "row-even") @(!hasLinesplits && !hasMoreInfo ? "row-bottom" : string.Empty)">
+                        <td>@line.Quantity</td>
+                        <td>@line.Unit</td>
+                        <td>@(string.IsNullOrWhiteSpace(line.CatalogNumber) ? "n/a" : line.CatalogNumber)</td>
+                        <td>@line.Description</td>
+                        <td>@(line.Commodity != null ? line.Commodity.Name : "n/a")</td>
+                        <td>@line.UnitPrice</td>
                     </tr>
-                }
+                              
+                    if (hasLinesplits)
+                    {
+                        <tr class="@(odd ? "row-odd" : "row-even") @(hasMoreInfo ? "row-bottom" : string.Empty)">
+                            <td colspan="6">
+                                @*<div class="row-split ui-corner-all @(line.UnitPrice * line.Quantity != line.Splits.Sum(a => a.Amount) ? "row-split-prob" : string.Empty)">*@
+                                <div class="row-split ui-corner-all">
+                                    <table>
+                                        <thead>
+                                            <tr><td colspan="4">Line Item Split</td></tr>
+                                        </thead>
+                                        <tbody>
+                                            @foreach (var split in Model.Splits.Where(x=>x.LineItem == line))
+                                            {  
+                                                <tr>
+                                                    <td>@(string.IsNullOrWhiteSpace(split.Account) ? "n/a" : split.Account)</td>
+                                                    <td>@(string.IsNullOrWhiteSpace(split.SubAccount) ? "n/a" : split.SubAccount)</td>
+                                                    <td>@(string.IsNullOrWhiteSpace(split.Project) ? "n/a" : split.Project)</td>
+                                                    <td>@split.Amount</td>
+                                                </tr>
+                                            }
+                                        </tbody>
+                                    </table>
 
-                odd = !odd;
-            }
-        </tbody>
-        <tfoot>
-            <tr class="item-footer">
-                <td colspan="4">&nbsp;</td>
-                <td class="label row-total-label">Subtotal:</td>
-                <td class="row-total-value">@string.Format("${0:f}", Model.Order.TotalFromDb)</td>
-            </tr>
-            <tr class="item-footer">
-                <td colspan="4">&nbsp;</td>
-                <td class="label row-total-label">Estimated Freight:</td>
-                <td class="row-total-value">@string.Format("${0:f}", Model.Order.FreightAmount)</td>            
-            </tr>
-            <tr class="item-footer">
-                <td colspan="4">&nbsp;</td>
-                <td class="label row-total-label">Estimated Shipping:</td>
-                <td class="row-total-value">@string.Format("${0:f}", Model.Order.ShippingAmount)</td>            
-            </tr>
-            <tr class="item-footer">
-                <td colspan="4"></td>
-                <td class="label row-total-label">Estimated Tax:</td>
-                <td class="row-total-value">@string.Format("{0:f}%", Model.Order.EstimatedTax)</td>
-            </tr>
-            <tr class="item-footer">
-                <td colspan="4"><em>*All totals are estimated, final values are determined after uploaded to KFS.</em></td>
-                <td class="label row-total-label row-total-grandtotal">Grand Total:</td>
-                <td class="row-total-value">@string.Format("${0:f}", Model.Order.GrandTotalFromDb)</td>
-            </tr>
-        </tfoot>
-    </table>
+                                </div>
+                            </td>
+                        </tr>                    
+                    }
+
+
+                    if (hasMoreInfo)
+                    {
+                        <tr class="@(odd ? "row-odd" : "row-even") row-bottom">
+                            <td colspan="6" class="extra-info">
+                                @if (line.Commodity != null)
+                                {
+                                    <div class="line-commodity"><strong>Commodity:</strong> @string.Format("[{0}] {1}", line.Commodity.Id, line.Commodity.Name)</div>
+                                }
+                                @if (!string.IsNullOrWhiteSpace(line.Url))
+                                {
+                                    var validUrl = Uri.IsWellFormedUriString(line.Url, UriKind.Absolute);
+                                    <div class="line-url">
+                                        <strong>Url:</strong>
+                                        @if (validUrl)
+                                        {
+                                            <a href="@line.Url">@line.Url</a>   
+                                        }
+                                        else
+                                        {
+                                            @line.Url
+                                        }
+                                    </div>    
+                                }
+                                @if (!string.IsNullOrWhiteSpace(line.Notes))
+                                {
+                                    <div class="line-notes"><strong>Notes:</strong> @line.Notes</div>    
+                                }
+                            </td>
+                        </tr>
+                    }
+
+                    odd = !odd;
+                }
+            </tbody>
+            <tfoot>
+                <tr class="item-footer">
+                    <td colspan="4">&nbsp;</td>
+                    <td class="label row-total-label">Subtotal:</td>
+                    <td class="row-total-value">@string.Format("${0:f}", Model.Order.TotalFromDb)</td>
+                </tr>
+                <tr class="item-footer">
+                    <td colspan="4">&nbsp;</td>
+                    <td class="label row-total-label">Estimated Freight:</td>
+                    <td class="row-total-value">@string.Format("${0:f}", Model.Order.FreightAmount)</td>            
+                </tr>
+                <tr class="item-footer">
+                    <td colspan="4">&nbsp;</td>
+                    <td class="label row-total-label">Estimated Shipping:</td>
+                    <td class="row-total-value">@string.Format("${0:f}", Model.Order.ShippingAmount)</td>            
+                </tr>
+                <tr class="item-footer">
+                    <td colspan="4"></td>
+                    <td class="label row-total-label">Estimated Tax:</td>
+                    <td class="row-total-value">@string.Format("{0:f}%", Model.Order.EstimatedTax)</td>
+                </tr>
+                <tr class="item-footer">
+                    <td colspan="4"><em>*All totals are estimated, final values are determined after uploaded to KFS.</em></td>
+                    <td class="label row-total-label row-total-grandtotal">Grand Total:</td>
+                    <td class="row-total-value">@string.Format("${0:f}", Model.Order.GrandTotalFromDb)</td>
+                </tr>
+            </tfoot>
+        </table>
     </div>
 
 
