Line Item Outstanding Qty should show a value even if no one has entered a received qty yet.

--- a/Purchasing.Web/Views/Order/ReceiveItems.cshtml
+++ b/Purchasing.Web/Views/Order/ReceiveItems.cshtml
@@ -126,7 +126,7 @@
     }
     else
     {
-        rtValue = string.Format("{0} class='bold'></td>", rtValue);
+        rtValue = string.Format("{0} class='red bold'>({1})</td>", rtValue, string.Format("{0:0.000}", total));
     }
     @Html.Raw(rtValue)
 }
