WIP Service Message. Needs styling. Have not yet set-up caching on controller.

--- a/Purchasing.Web/Views/Shared/_Layout.cshtml
+++ b/Purchasing.Web/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
 <body>
 	<div class="wrapper">
 	
-		@Html.Partial("_ServiceMessages")
+    @Html.Action("ServiceMessages", "ServiceMessage")		
 	
 		<header id="branding">
 			
